--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,7 +9,7 @@
     </tr>
   </thead>
   <tbody>
-{{each posts as |post| }}
+{{#each posts as |post| }}
     <tr>
       <th scope="row">1</th>
       <td>{{title}}</td>
