--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/signup">Signup</a>
         </li>
-        {{if logged_in}}
+        {{#if logged_in}}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown
