--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,6 +9,7 @@
     </tr>
   </thead>
   <tbody>
+    {{#if loggedIn }}
 {{#each posts as |post| }}
     <tr>
       <th scope="row">1</th>
@@ -18,5 +19,7 @@
     </tr>
     
 {{/each}}
+{{else}} Not logged in <a href="/login">Login Page</a>
+{{/if}}
   </tbody>
 </table>
