--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,9 +20,7 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/signup">Signup</a>
-        </li>
+      
         {{#if logged_in}}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -37,7 +35,7 @@
         </li>
         {{else}}
         <li class="nav-item">
-          <a class="nav-link">Login</a>
+          <a class="nav-link" href="/login">Login/Sign up</a>
         </li>
         {{/if}}
       </ul>
