--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,11 +9,10 @@
     </tr>
   </thead>
   <tbody>
-    {posts}
 {{#each posts as |post| }}
     <tr>
       <th scope="row">1</th>
-      <td>{{title}}</td>
+      <td>{{post.title}}</td>
       <td>{{body}}</td>
       <td>{{user}}</td>
     </tr>
