--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,5 +1,5 @@
 <h2>Top trending Post</h2>
-{{#each post in posts}}
+{{!-- {{#each post in posts}}
 <div class="card text-center">
   <div class="card-header">
     {post.title}
@@ -13,5 +13,5 @@
     2 days ago
   </div>
 </div>
-{{/each}}
+{{/each}} --}}
 <h3>Test</h3>
