--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -2,7 +2,7 @@
     <section class="row">
         <article class="col-md-6">
             <h2>Create a post</h2>
-            <form class="addPost form">
+            <form class="add-post">
                 <div class="mb-3">
                     <label for="exampleInputText" class="form-label">Add Title</label>
                     <input type="text" class="form-control" id="title" aria-describedby="textHelp">
@@ -21,5 +21,5 @@
         
                
     </section>
-
-    <script src="/js/addPost.js"></script>
+POst
+    {{!-- <script src="/js/profile.js"></script> --}}
