--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,20 +1,19 @@
 <h2>Top trending Post</h2>
-{{#each post in posts}}
+{{#each Posts as |post|}}
 <div class="card text-center">
   <div class="card-header">
-    {post.title}
+    {{post.title}}
   </div>
   <div class="card-body">
-    <h5 class="card-title">{post.body}</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Comment</a>
+    <h5 class="card-title">{{post.body}}</h5>
+    <a href="/api/comments/{{post.id}}" class="btn btn-primary">Comment</a>
   </div>
   <div class="card-footer text-muted">
     2 days ago
   </div>
 </div>
 {{/each}}
-<form class="add_post">
+<form class="add-post">
   <div class="mb-3">
     <label for="exampleInputText" class="form-label">Title</label>
     <input type="text" class="form-control" id="title" aria-describedby="text">
